--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-.DS_Store
-.idea/
+t Byte-compiled / optimized / DLL files
+.vscode
+.idea
+
+.env
+_build
+*~
+*.sw*
+*.DS_Store
+__pycache__/
+*.py[cod]
+*$py.class
+*.log
+
+/temp/
+*.wasm
 *.yml
